syntax = "proto3";
package smart_home;

// Thermostat service
service Thermostat {
    rpc TemperatureStatus(TemperatureStatusRequest) returns (TemperatureStatusResponse) {}
    rpc SetTemperature(SetTemperatureRequest) returns (SetTemperatureResponse) {}
    rpc BoostStatus(BoostStatusRequest) returns (BoostStatusResponse) {}
    rpc ManageBoost(ManageBoostRequest) returns (ManageBoostResponse) {} // Renamed from BoostTemperature
    rpc SetBoost(SetBoostRequest) returns (SetBoostResponse) {}
    rpc HotWaterStatus(HotWaterStatusRequest) returns (HotWaterStatusResponse) {}
    rpc SetHotWater(SetHotWaterRequest) returns (SetHotWaterResponse) {}
}

// TemperatureStatus request
message TemperatureStatusRequest {
}

// TemperatureStatus response
message TemperatureStatusResponse {
    double currentTemperature = 1;
}

// SetTemperature request
message SetTemperatureRequest {
    double setTemperature = 1;
}

// SetTemperature response
message SetTemperatureResponse {
    string message = 1;
}

// BoostStatus request
message BoostStatusRequest {
}

// BoostStatus response
message BoostStatusResponse {
  bool isBoostActive = 1;
  int32 boostTimeRemaining = 2; 
  double boostTemperature = 3;//
}

// ManageBoost request
message ManageBoostRequest { 
    double boostTemperature = 1;
    int32 boostTime = 2; // 
}

// ManageBoost response
message ManageBoostResponse { 
    string message = 1;
}

// SetBoost request
message SetBoostRequest {
  bool setBoost = 1;
}

// SetBoost response
message SetBoostResponse {
  string message = 1;
}

// HotWaterStatus request
message HotWaterStatusRequest {
}

// HotWaterStatus response
message HotWaterStatusResponse {
    bool isHotWaterOn = 1;
}

// SetHotWater request
message SetHotWaterRequest {
    bool setHotWater = 1;
}

// SetHotWater response
message SetHotWaterResponse {
    string message = 1;
}